// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseCvssScore cvssV2 should render correct tooltip content 1`] = `null`;

exports[`parseCvssScore cvssV2 should render value in span 1`] = `
<span>
  2.0
   
</span>
`;

exports[`parseCvssScore cvssV2 with labels should render correct tooltip content 1`] = `null`;

exports[`parseCvssScore cvssV2 with labels should render value in span 1`] = `
<span>
  2.0
   
  (CVSSv2)
</span>
`;

exports[`parseCvssScore cvssV3 1`] = `"2.0"`;

exports[`parseCvssScore no cvss should render N/A in span 1`] = `
<span>
  N/A
</span>
`;

exports[`parseCvssScore no cvss should render correct tooltip content 1`] = `null`;
